<resources>
    <string name="app_name">MyFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini Fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_desc">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah Dialog</string>
    <string name="to_category">ke Fragment category</string>
    <string name="question_coach">Siapa Pelatih fav?</string>
    <string name="si_a">A</string>
    <string name="si_b">B</string>
    <string name="si_c">C</string>
    <string name="si_d">D</string>
    <string name="choose">pilih</string>
    <string name="close">Tutup</string>

</resources>
